atlas/main/default/objects/Rate_Benchmark__c/Rate_Benchmark__c.object-meta.xml
<CustomObject>
    <label>Rate Benchmark</label>
    <nameField>
        <label>Rate Benchmark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>