atlas/main/default/objects/Rate_Benchmark__c/fields/As_Of__c.field-meta.xml
<CustomField>
    <fullName>As_Of__c</fullName>
    <label>As Of</label>
    <type>DateTime</type>
</CustomField>