atlas/main/default/objects/Rate_Benchmark__c/fields/Average_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Rate__c</fullName>
    <label>Average Rate (per mile)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>