atlas/main/default/objects/Rate_Benchmark__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Dry Van</fullName><default>true</default><label>Dry Van</label></value>
            <value><fullName>Refrigerated (Reefer)</fullName><default>false</default><label>Refrigerated (Reefer)</label></value>
            <value><fullName>Flatbed</fullName><default>false</default><label>Flatbed</label></value>
            <value><fullName>Step Deck</fullName><default>false</default><label>Step Deck</label></value>
            <value><fullName>Tanker</fullName><default>false</default><label>Tanker</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>