atlas/main/default/objects/Rate_Benchmark__c/fields/Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Surcharge__c</fullName>
    <label>Fuel Surcharge (per mile)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>