atlas/main/default/objects/Rate_Benchmark__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <label>Lane</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>