atlas/main/default/objects/Rate_Benchmark__c/fields/Low_Rate__c.field-meta.xml
<CustomField>
    <fullName>Low_Rate__c</fullName>
    <label>Low Rate (per mile)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>