atlas/main/default/objects/Rate_Benchmark__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DAT</fullName><default>false</default><label>DAT</label></value>
            <value><fullName>Truckstop</fullName><default>false</default><label>Truckstop</label></value>
            <value><fullName>Manual</fullName><default>true</default><label>Manual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>